# ejemploclase

./: .gitignore  README.md  kmst-0.mst  kmst-1.mst  kmst-10.mst  kmst-100.mst  kmst-101.mst  kmst-102.mst  kmst-103.mst  kmst-104.mst  kmst-105.mst  kmst-106.mst  kmst-107.mst  kmst-108.mst  kmst-109.mst  kmst-11.mst  kmst-110.mst  kmst-111.mst  kmst-112.mst  kmst-113.mst  kmst-114.mst  kmst-115.mst  kmst-116.mst  kmst-117.mst  kmst-118.mst  kmst-119.mst  kmst-12.mst  kmst-120.mst  kmst-121.mst  kmst-122.mst  kmst-123.mst  kmst-124.mst  kmst-125.mst  kmst-126.mst  kmst-127.mst  kmst-128.mst  kmst-129.mst  kmst-13.mst  kmst-130.mst  kmst-131.mst  (+560 more)
proyecto1/Reporte_Proyecto_1/: main.tex  rapport.cls  referencias.bib
proyecto1/src/main/: database_reader.jl  main.jl  recocido_simulado.jl  vecinos.jl
proyecto2/: README.md  meson.build
proyecto2/data/: input.txt
proyecto2/include/: graph.hpp  graph_reader.hpp  grapher.hpp  graphy.hpp  pso.hpp
proyecto2/src/: graph.cpp  graph_reader.cpp  graphy.cpp  main.cpp  pso.cpp
proyecto2/tests/: meson.build
